[package]
name = "rgba"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.14"
glium = "0.25.0"
glutin = "0.21.1"
schedule_recv = "0.1.0"
clap = {version = "2.33.0", features = ["yaml"]}
crossbeam-channel = "0.3"
zip = "0.5.3"
log = "0.4"
