[package]
name = "rgba"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.14"
glium = "0.25.0"
schedule_recv = "0.1.0"
clap = {version = "2.33.0", features = ["yaml"]}
crossbeam-channel = "0.3.9"
zip = "0.5.3"
log = "0.4"
rand = "0.7.2"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
piston2d-glium_graphics = "0.72.0"
