[package]
name = "rgba"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.14"
schedule_recv = "0.1.0"
clap = {version = "2.33.0", features = ["yaml"]}
crossbeam-channel = "0.3.9"
zip = "0.5.3"
log = "0.4"
rand = "0.7.2"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
piston2d-gfx_graphics = "0.66.0"
piston-texture = "0.8.0"
piston_window = "0.105.0"
image = "0.22.0"
gfx_core = "0.9.1"
gfx_device_gl = "0.16.2"
